--- a/food items/menu.html
+++ b/food items/menu.html
@@ -25,6 +25,7 @@
 
   .items{
     font-size: 20px;
+    text-transform:capitalize;
   }
 
   .image-food{
@@ -38,14 +39,14 @@
 
     </style>
 </head>
-<body style="margin: 0;background-color: gainsboro;">
+<body style="margin: 0;background-color: darkseagreen;">
     <div id="topbar">
         <span class="menu-item">Index</span>
         <span class="menu-item">Food</span>
         <span class="menu-item">About</span>
     </div>
 
-    <h3 id="heading">Top 5 Favourite Foods</h3>
+    <h3 id="heading">Top 5 Favourite Foods:</h3>
 
     <ul>
         <li><a class="items" href="#images/bryani.jpg">Bryani</a></li>
