--- a/food items/form-design.html
+++ b/food items/form-design.html
@@ -8,7 +8,7 @@
     <style>
         form{
             background-color: white;
-            width: 500px;
+            width: 300px;
             padding: 20px;
             border-radius: 20px;
             margin-right: auto;
@@ -37,10 +37,11 @@
           border-radius: 10px;
           height: 20px;
         }
+     
     
     </style>
 </head>
-<body style="background-color: lightblue;">
+<body style="background-color: lightblue; background-image: url(pizza.jpg);">
     <h3 class="head">Idea submission form</h3>
 <form>
     <div>
